--- a/changelog
+++ b/changelog
@@ -1,6 +1,8 @@
 isomd5sum (1:1.0.10-2) UNRELEASED; urgency=low
 
   * Use debhelper 9, let it take care of hardening
+  * Add Debian package source control; move upstream git information to
+    README.source
 
  -- Ryan Finnie <ryan@finnie.org>  Sun, 21 Jul 2013 09:49:37 +0000
 
