--- a/changelog
+++ b/changelog
@@ -1,10 +1,11 @@
-isomd5sum (1:1.0.10-2) UNRELEASED; urgency=low
+isomd5sum (1:1.0.11-1) UNRELEASED; urgency=low
 
+  * New upstream release
   * Use debhelper 9, let it take care of hardening
   * Add Debian package source control; move upstream git information to
     README.source
 
- -- Ryan Finnie <ryan@finnie.org>  Sun, 21 Jul 2013 09:49:37 +0000
+ -- Ryan Finnie <ryan@finnie.org>  Sun, 21 Jul 2013 21:54:34 +0000
 
 isomd5sum (1:1.0.10-1) unstable; urgency=low
 
