--- a/changelog
+++ b/changelog
@@ -4,6 +4,7 @@ isomd5sum (1:1.0.11-1) UNRELEASED; urgency=low
   * Use debhelper 9, let it take care of hardening
   * Add Debian package source control; move upstream git information to
     README.source
+  * Bump Standards-Version to 3.9.4
 
  -- Ryan Finnie <ryan@finnie.org>  Sun, 21 Jul 2013 21:54:34 +0000
 
