--- a/changelog
+++ b/changelog
@@ -5,6 +5,8 @@ isomd5sum (1:1.0.11-1) UNRELEASED; urgency=low
   * Add Debian package source control; move upstream git information to
     README.source
   * Bump Standards-Version to 3.9.4
+  * Remove pyisomd5sum.so.python* from dh_auto_clean, in case a release
+    disappears from pyversions between build and clean
 
  -- Ryan Finnie <ryan@finnie.org>  Sun, 21 Jul 2013 21:54:34 +0000
 
