--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+isomd5sum (1:1.0.11-2) UNRELEASED; urgency=medium
+
+  * Update Vcs location
+
+ -- Ryan Finnie <ryan@finnie.org>  Sun, 29 Nov 2015 01:42:57 +0000
+
 isomd5sum (1:1.0.11-1) unstable; urgency=low
 
   * New upstream release
