--- a/changelog
+++ b/changelog
@@ -2,6 +2,7 @@ isomd5sum (1:1.0.11-2) UNRELEASED; urgency=medium
 
   * Update Vcs location
   * Update Homepage/uscan to reflect upstream management via Github
+  * Bump Standards-Version to 3.9.6
 
  -- Ryan Finnie <ryan@finnie.org>  Sun, 29 Nov 2015 01:42:57 +0000
 
