isomd5sum (1:1.2.1-1) unstable; urgency=medium
  * New upstream release

 -- Ryan Finnie <ryan@finnie.org>  Sun, 06 Aug 2017 22:20:28 +0000

--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+isomd5sum (1:1.2.1-1) unstable; urgency=medium
+
+  * New upstream release
+
+ -- Ryan Finnie <ryan@finnie.org>  Sun, 06 Aug 2017 22:20:28 +0000
+
 isomd5sum (1:1.1.0-1) unstable; urgency=medium
 
   * New upstream release
