--- a/changelog
+++ b/changelog
@@ -1,3 +1,13 @@
+isomd5sum (1:1.2.3-4) unstable; urgency=medium
+
+  * Remove python-pyisomd5sum (Python 2) package
+  * Bump Standards-Version to 4.4.0
+  * Convert debian/copyright to DEP5
+  * Remove obsoleted spelling-error-in-patch-description long
+    long override
+
+ -- Ryan Finnie <ryan@finnie.org>  Sat, 31 Aug 2019 03:07:09 +0000
+
 isomd5sum (1:1.2.3-3) unstable; urgency=medium
 
   * Fix previous FTBFS fix attempt (updated 32bitcheck.patch)
